
   6) A compile problem on Solaris has been fixed.

   7) It is now possible to specify the printer model to all escputil
      commands, via the -m option.  It is no longer necessary to use
      the -u option to specify a new printer vs. an old printer.

   8) The Postscript driver now sends device-specific settings, such
      as media type, to the print command.


----------------

B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.3:

  1) The Canon PIXMA iP4300 and related printers now print black
     properly.

  2) Margins have been improved for Canon PIXMA printers.

  3) Borderless printing has been improved for many of the Epson
     R200/R300 series printers and related multifunction devices.

  4) A build problem on certain systems has been fixed.


----------------

C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:

  1) Improved tunings for Epson printers using Claria inks.

     The driver for the Stylus Photo 1400 has two separate quality
     settings for 720x360 and 720 DPI.  The 720x360 DPI Enhanced and
     720 DPI High Quality options offer improved quality at some cost
     in printing speed.  The small format Claria-based printers (R260,
     R390, RX580, and related printers) offer 720x360 and 720 DPI
     modes approximately equal in quality to the Enhanced and High
     Quality modes on the 1400 without a speed penalty.

  2) A problem whereby in some situations printers using Claria inks
     did not print black ink has been fixed.

  3) A problem with the Postscript driver always printing in grayscale
     has been fixed.  This problem was apparently introduced in 5.1.1.

  4) The range of sizes for printing custom CD's has been extended
     down to 65 mm in both the Epson and Canon drivers.

  5) The Epson Stylus Photo RX590 is now supported.

  6) Borderless printing on the Epson Stylus Photo RX400, RX420,
     RX425, RX430, RX500, RX510, RX600, RX630, and RX640 now works
     correctly.
